Implement automatic invoice number generation with color/B&W print modes

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -598,6 +598,36 @@
                                                         for="wh_purchase_return_delete">Delete</label></li>
                                             </ul>
                                         </li>
+                                        <li><input type="checkbox" id="wh_sale" class="form-check-input"><label
+                                                class="checkbox-label" for="wh_sale">WH Sale Entry</label>
+                                            <ul>
+                                                <li><input type="checkbox" id="wh_sale_edit"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_sale_edit">Edit</label></li>
+                                                <li><input type="checkbox" id="wh_sale_edit_posted"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_sale_edit_posted">Edit Posted</label>
+                                                </li>
+                                                <li><input type="checkbox" id="wh_sale_delete"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_sale_delete">Delete</label></li>
+                                            </ul>
+                                        </li>
+                                        <li><input type="checkbox" id="wh_sale_return" class="form-check-input"><label
+                                                class="checkbox-label" for="wh_sale_return">WH Sale Entry Return</label>
+                                            <ul>
+                                                <li><input type="checkbox" id="wh_sale_return_edit"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_sale_return_edit">Edit</label></li>
+                                                <li><input type="checkbox" id="wh_sale_return_edit_posted"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_sale_return_edit_posted">Edit Posted</label>
+                                                </li>
+                                                <li><input type="checkbox" id="wh_sale_return_delete"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_sale_return_delete">Delete</label></li>
+                                            </ul>
+                                        </li>
                                         <li><input type="checkbox" id="wh_item" class="form-check-input"><label
                                                 class="checkbox-label" for="wh_item">Item Registration</label>
                                             <ul>
