--- a/Frontend/views/wh-purchase.html
+++ b/Frontend/views/wh-purchase.html
@@ -234,6 +234,9 @@
                 <button class="btn btn-header-success" onclick="savePurchase('Posted')" id="btnPost">
                     <i class="fas fa-check-circle me-1"></i> Post
                 </button>
+                <button class="btn btn-header-light" onclick="printInvoice(currentPurchaseId)" id="btnPrint">
+                    <i class="fas fa-print me-1"></i> Print
+                </button>
                 <button class="btn btn-header-warning" onclick="resetForm()" id="btnNew">
                     <i class="fas fa-plus me-1"></i> New
                 </button>
