--- a/Frontend/views/wh-stock-audit.html
+++ b/Frontend/views/wh-stock-audit.html
@@ -249,7 +249,13 @@
                 <button class="btn btn-header-success" onclick="saveAudit('Posted')" id="btnPost">
                     <i class="fas fa-check-circle me-1"></i> Post
                 </button>
-                <button class="btn btn-header-warning" onclick="resetForm()" id="btnNew">
+                <button class="btn btn-header-light" onclick="printInvoice()" id="btnPrint">
+                    <i class="fas fa-print me-1"></i> Print
+                </button>
+                <button class="btn btn-header-warning" onclick="saveAndPrint()" id="btnSavePrint">
+                    <i class="fas fa-print me-1"></i> Save & Print
+                </button>
+                <button class="btn btn-header-info" onclick="resetForm()" id="btnNew">
                     <i class="fas fa-plus me-1"></i> New
                 </button>
             </div>
