Update: added WH Customer Ledger/Balance reports, robust ledger reversal, Sync Balance feature, and UI integration

--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -299,6 +299,14 @@
                                                 <li><input type="checkbox" id="payment_reports_link"
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="payment_reports_link">Payment Reports</label></li>
+                                                <li><input type="checkbox" id="wh_customer_ledger_rpt"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_customer_ledger_rpt">WH Customer Ledger Report</label>
+                                                </li>
+                                                <li><input type="checkbox" id="wh_customer_balance_rpt"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_customer_balance_rpt">WH Customer Balance Report</label>
+                                                </li>
                                             </ul>
                                         </li>
                                         <li>
@@ -639,7 +647,12 @@
                                         <li><input type="checkbox" id="wh_stock_audit" class="form-check-input"><label
                                                 class="checkbox-label" for="wh_stock_audit">WH Stock Audit</label>
                                         </li>
+                                        <li><input type="checkbox" id="wh_customer_payment"
+                                                class="form-check-input"><label class="checkbox-label"
+                                                for="wh_customer_payment">WH Customer Payment</label>
+                                        </li>
                                     </ul>
+
                                 </li>
                             </ul>
                         </div>
