--- a/Frontend/views/groups.html
+++ b/Frontend/views/groups.html
@@ -307,6 +307,30 @@
                                                         class="form-check-input"><label class="checkbox-label"
                                                         for="wh_customer_balance_rpt">WH Customer Balance Report</label>
                                                 </li>
+                                                <li><input type="checkbox" id="wh_stock_position_rpt"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_stock_position_rpt">WH Stock Position</label>
+                                                </li>
+                                                <li><input type="checkbox" id="wh_item_ledger_rpt"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_item_ledger_rpt">WH Item Ledger</label>
+                                                </li>
+                                                <li><input type="checkbox" id="wh_cost_stock_rpt"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_cost_stock_rpt">WH Cost of Stock</label>
+                                                </li>
+                                                <li><input type="checkbox" id="wh_stock_activity_rpt"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_stock_activity_rpt">WH Stock Activity</label>
+                                                </li>
+                                                <li><input type="checkbox" id="wh_date_wise_stock_rpt"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_date_wise_stock_rpt">WH Date-Wise Stock</label>
+                                                </li>
+                                                <li><input type="checkbox" id="wh_stock_in_hand_rpt"
+                                                        class="form-check-input"><label class="checkbox-label"
+                                                        for="wh_stock_in_hand_rpt">WH Stock In Hand</label>
+                                                </li>
                                             </ul>
                                         </li>
                                         <li>
