--- a/Frontend/views/wh-customer.html
+++ b/Frontend/views/wh-customer.html
@@ -86,6 +86,12 @@
                             <button class="btn btn-success btn-sm" onclick="exportToExcel()">
                                 <i class="fas fa-file-excel me-1"></i> Export Excel
                             </button>
+                            <button class="btn btn-warning btn-sm text-white"
+                                onclick="document.getElementById('excelFileInput').click()">
+                                <i class="fas fa-file-import me-1"></i> Import Excel
+                            </button>
+                            <input type="file" id="excelFileInput" style="display: none;" accept=".xlsx, .xls"
+                                onchange="handleExcelImport(event)">
                         </div>
                     </div>
                 </div>
